优化解析应用的逻辑

--- a/server/package.json
+++ b/server/package.json
@@ -20,36 +20,36 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "koa": "^2.4.1",
-        "koa-bodyparser": "^4.2.0",
-        "koa-cors": "0.0.16",
-        "koa-router": "7.0.0",
-        "koa-multer": "^1.0.2",
-        "koa-static": "^4.0.2",
-        "koa-mount": "^3.0.0",
-        "koa-jwt": "^3.3.0",
-        "koa-body": "^2.5.0",
-        "koa-compose": "^4.1.0",
-        "bunyan": "^1.8.12",
-        "mongoose": "^5.7.5",
-        "jsonwebtoken": "^8.5.0",
-        "unzipper": "^0.9.3",
-        "unzip-stream": "^0.3.0",
-        "lodash": "^4.17.4",
-        "pm2": "^2.9.3",
-        "uuid": "^3.2.1",
-        "mime": "^2.2.0",
-        "fawn": "^2.1.5",
-        "bcrypt": "^3.0.4",
-        "nodemailer": "^4.6.3",
-        "ipa-metadata2": "^1.4.2",
-        "mustache": "^2.3.0",
-        "ldapjs": "^1.0.2",
-        "etl": "^0.5.13",
+        "adbkit-apkreader": "^3.2.0",
+        "app-info-parser": "^0.2.7",
         "axios": "^0.18.0",
+        "bcrypt": "^3.0.4",
+        "bunyan": "^1.8.12",
+        "etl": "^0.5.13",
         "hoek": ">=4.2.1",
+        "ipa-metadata2": "^1.4.2",
+        "jsonwebtoken": "^8.5.0",
+        "koa": "^2.4.1",
+        "koa-body": "^2.5.0",
+        "koa-bodyparser": "^4.2.0",
+        "koa-compose": "^4.1.0",
+        "koa-cors": "0.0.16",
+        "koa-jwt": "^3.3.0",
+        "koa-mount": "^3.0.0",
+        "koa-multer": "^1.0.2",
+        "koa-router": "7.0.0",
+        "koa-static": "^4.0.2",
+        "ldapjs": "^1.0.2",
+        "lodash": "^4.17.4",
+        "mime": "^2.2.0",
+        "mongoose": "^5.7.5",
+        "fawn": "^2.1.5",
         "mpath": ">=0.5.1",
-        "app-info-parser": "^0.2.3"
+        "mustache": "^2.3.0",
+        "mysql": "^2.18.1",
+        "nodemailer": "^4.6.3",
+        "pm2": "^2.9.3",
+        "uuid": "^3.2.1"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
