--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
         "bcrypt": "^3.0.4",
         "bunyan": "^1.8.12",
         "etl": "^0.5.13",
+        "fawn": "^2.1.5",
         "hoek": ">=4.2.1",
         "jsonwebtoken": "^8.5.0",
         "koa": "^2.4.1",
@@ -42,12 +43,12 @@
         "lodash": "^4.17.4",
         "mime": "^2.2.0",
         "mongoose": "^5.7.5",
-        "fawn": "^2.1.5",
         "mpath": ">=0.5.1",
         "mustache": "^2.3.0",
         "mysql": "^2.18.1",
         "nodemailer": "^4.6.3",
         "pm2": "^2.9.3",
+        "redis": "^3.0.2",
         "uuid": "^3.2.1"
     },
     "devDependencies": {
