--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
         "start": "babel-node index.js",
         "build": "babel src -d sdist --source-maps",
         "preLaunchTask": "npm run build",
-        "debug": "babel-node index.js --inspect --debug-brk --nolazy index.js"
+        "debug": "babel-node index.js",
+        "dbload": "sequelize-automate -c ./database"
     },
     "keywords": [
         "koa",
@@ -46,9 +47,11 @@
         "mpath": ">=0.5.1",
         "mustache": "^2.3.0",
         "mysql": "^2.18.1",
+        "mysql2": "^2.2.5",
         "nodemailer": "^4.6.3",
         "pm2": "^2.9.3",
         "redis": "^3.0.2",
+        "sequelize": "^6.5.0",
         "uuid": "^3.2.1"
     },
     "devDependencies": {
@@ -66,6 +69,7 @@
         "eslint-plugin-node": "^6.0.1",
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-standard": "^3.0.1",
+        "sequelize-automate": "^1.2.2",
         "mocha": "^5.0.1"
     }
 }
