--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,9 @@
         "adbkit-apkreader": "^3.2.0",
         "app-info-parser": "^0.2.7",
         "axios": "^0.18.0",
-        "bcrypt": "^3.0.4",
+        "bcryptjs": "^2.4.3",
         "bunyan": "^1.8.12",
         "etl": "^0.5.13",
-        "fawn": "^2.1.5",
         "hoek": ">=4.2.1",
         "jsonwebtoken": "^8.5.0",
         "koa": "^2.4.1",
@@ -45,7 +44,6 @@
         "mime": "^2.2.0",
         "mpath": ">=0.5.1",
         "mustache": "^2.3.0",
-        "mysql": "^2.18.1",
         "mysql2": "^2.2.5",
         "nodemailer": "^4.6.3",
         "pm2": "^2.9.3",
