--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "babel-node index.js",
+        "prod": "set NODE_ENV=production&&npm start",
         "build": "babel src -d sdist --source-maps",
         "preLaunchTask": "npm run build",
         "debug": "babel-node index.js",
