修复消息列表时间不正确问题

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
         "axios": "^0.18.0",
         "bcryptjs": "^2.4.3",
         "bunyan": "^1.8.12",
+        "dotenv": "^8.2.0",
         "etl": "^0.5.13",
         "hoek": ">=4.2.1",
         "jsonwebtoken": "^8.5.0",
